Fix spacing in game start component

--- a/src/css/game-start.scss
+++ b/src/css/game-start.scss
@@ -1,6 +1,10 @@
 @import 'functions.scss';
 
 /* game start */
+#game-start {
+    @include display-flex(column, center, center, 2.5rem);
+}
+
 #pick-player-component {
     @include display-flex(column, center, center, 1.25rem);
     background-color: $semi-dark-navy;
